edited swagger file-added Persontype; PersonTypeApi-incomplete
