# swagger.yaml
@@ -392,8 +392,104 @@ paths:
           description: Deletes News
         500:
           description: Error with deleting News by id. 
-      
-
+  /api/v1/persontype:
+    get:
+      tags: ["PersonType"]
+      summary: |
+        Fetches all 'persontype' objects
+      description: |
+        Fetches all 'person type' objects. up to a 'size' if specified,
+        otherwise fetches all objects.
+      parameters:
+        - name: size
+          in: query
+          description: The maximum number of persontypes to fetch
+          required: false
+          type: number
+          format: int32
+      responses:
+        200:
+          description: Gets persontypes
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/PersonType'
+        500:
+          description: Error getting persontypes
+    post:
+      tags: ["PersonType"]
+      parameters:
+        - name: PersonType
+          in: body
+          descritpion: The persontype you want to post
+          schema:
+            $ref: '#/definitions/PersonType'
+          required: true
+      responses:
+        200:
+          description: Creates a new persontype in the system
+        500:
+          description: Error creating persontype.
+        
+  
+  /api/v1/persontype/{id}:
+    get:
+      tags: ["PersonType"]
+      summary: |
+        Fetches the 'person type' for id 'id'.
+      description: |
+      parameters:
+        - name: id
+          in: path
+          description: The id of the person type to fetch
+          required: true
+          type: number
+          format: int32
+      responses:
+        200:
+          description: Successful response
+          schema:
+            $ref: '#/definitions/PersonType'
+        500:
+          description: error getting persontype with id 'id'
+    put:
+      tags: ["PersonType"]
+      summary: |
+        The persontype to update
+      parameters:
+        - name: id
+          in: path
+          description: the id of the persontype to fetch.
+          required: true
+          type: number
+          format: int32
+        - name: name
+          in: body
+          description: The type to update.
+          schema:
+            $ref: '#/definitions/PersonType'
+          required: true
+      responses:
+        200:
+          description: Updates the persontype.
+    delete:
+      tags: ["PersonType"]
+      summary: |
+        The persontype to delete.
+      parameters:
+        - name: id
+          in: path
+          description: The persontype to delete.
+          required: true
+          type: integer
+          format: int64
+      responses:
+        200:
+          description: Deletes the persontype.
+          schema:
+            $ref: '#/definitions/PersonType'
+        500:
+          description: Error deleting the persontype "ID".
 
 definitions:
   SocialConnection:
@@ -515,6 +611,14 @@ definitions:
         type: string
       new_password:
         type: string
+  PersonType:
+    type: object
+    properties:
+      id:
+        type: integer
+        format: int64
+      name:
+        type: string
 tags:
   - name: User
     description: Everything to do with User
@@ -526,3 +630,5 @@ tags:
     description: Everything to do with Jobs
   - name: News
     description: Everything to do with News
+  - name: PersonType
+    description: Everything to do with Person Type
